# USO

./: .clang-format  .gitignore  CMakeLists.txt  README.md  base_logic.cpp  base_logic.h  input.txt  main.cpp
data/: creator code.txt  images.txt  music.txt  saved_maps.txt
data/maps/: My_map_hahahahh.txt  New_map(1).txt  New_map(10).txt  New_map(2).txt  New_map(3).txt  New_map(4).txt  New_map(5).txt  New_map(6).txt  New_map(7).txt  New_map(8).txt  New_map(9).txt  New_map.txt  demo_drum_go_dum.txt  demo_gold_rush.txt  demo_map_unity.txt  editing_map.txt  editting_map.txt  mayday.txt  output_file.txt  saved_maps.txt  stronger.txt  test__map.txt  test_map_longer.txt
include/: base_logic.h  loading_menu.h  main.h  map.h  map_choice.h  map_constructor.h  map_management.h  map_master.h  map_objects.h  map_objects_management.h  maps.h  menu.h  menu_objects.h
include/SFML-2.5.1/doc/html/: Packet_8hpp_source.html  TcpSocket_8hpp_source.html  UdpSocket_8hpp_source.html  annotated.html  classsf_1_1Packet.html  classsf_1_1RenderWindow.html  classsf_1_1TcpSocket.html  classsf_1_1UdpSocket.html  group__network.html  hierarchy.html
source/: aim_map_constructor_impl.cpp  aim_map_impl.cpp  aim_map_run_impl.cpp  base_class_map.cpp  base_logic.cpp  bulletproof_map_impl.cpp  constr.cpp  conveyor_map_impl.cpp  conveyor_map_run_impl.cpp  loading_menu.cpp  main.cpp  map_choice.cpp  map_constructor_impl.cpp  map_management.cpp  map_master.cpp  map_objects.cpp  map_objects_management.cpp  maps.cpp  menu.cpp  menu_objects.cpp  taiko_map_run_impl.cpp
